--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#F1F1F1</color>
+    <color name="colorPrimaryDark">#F3F3F3</color>
+    <color name="colorAccent">#B90E29</color>
+    <color name="colorBlack">#000</color>
+    <color name="colorDarkGray">#444</color>
+    <color name="colorGray">#777</color>
+    <color name="colorNormalGray">#CCCCCC</color>
+    <color name="colorLightGray">#F5F6F7</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlue">#3F51B5</color>
+    <color name="colorGreen">#4CAF50</color>
 </resources>
